WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189097
ASSERTION FAILED: m_networkLoadInformationByID.contains(identifier) in WebKit::NetworkConnectionToWebProcess::addNetworkLoadInformationMetrics
https://bugs.webkit.org/show_bug.cgi?id=189097
Summary
ASSERTION FAILED: m_networkLoadInformationByID.contains(identifier) in WebKit...
Ryan Haddad
Reported
2018-08-29 14:03:03 PDT
Created
attachment 348428
[details]
Crash log The following assertion failure was seen with layout test inspector/worker/console-basic.html: ASSERTION FAILED: m_networkLoadInformationByID.contains(identifier) /Volumes/Data/slave/sierra-debug/build/Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.h(108) : void WebKit::NetworkConnectionToWebProcess::addNetworkLoadInformationMetrics(ResourceLoadIdentifier, const WebCore::NetworkLoadMetrics &) 1 0x121b85699 WTFCrash 2 0x10c5749fb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x10c85d9c0 WebKit::NetworkConnectionToWebProcess::addNetworkLoadInformationMetrics(unsigned long long, WebCore::NetworkLoadMetrics const&) 4 0x10c85d493 WebKit::NetworkResourceLoader::didFinishLoading(WebCore::NetworkLoadMetrics const&) 5 0x10c81868c WebKit::NetworkLoad::didCompleteWithError(WebCore::ResourceError const&, WebCore::NetworkLoadMetrics const&) 6 0x10c8c4fc7 WebKit::NetworkDataTaskCocoa::didCompleteWithError(WebCore::ResourceError const&, WebCore::NetworkLoadMetrics const&) 7 0x10c8c8dd3 -[WKNetworkSessionDelegate URLSession:task:didCompleteWithError:] 8 0x7fffbb8655c1 __51-[NSURLSession delegate_task:didCompleteWithError:]_block_invoke.162 9 0x7fffbdf81f19 __NSBLOCKOPERATION_IS_CALLING_OUT_TO_A_BLOCK__ 10 0x7fffbdf81bfc -[NSBlockOperation main] 11 0x7fffbdf80324 -[__NSOperationInternal _start:] 12 0x7fffbdf7c1db __NSOQSchedule_f 13 0x7fffd20c38fc _dispatch_client_callout 14 0x7fffd20d0aac _dispatch_main_queue_callback_4CF 15 0x7fffbc56ed69 __CFRUNLOOP_IS_SERVICING_THE_MAIN_DISPATCH_QUEUE__ 16 0x7fffbc53004d __CFRunLoopRun 17 0x7fffbc52f544 CFRunLoopRunSpecific 18 0x7fffbdf60252 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 19 0x7fffbdf6012a -[NSRunLoop(NSRunLoop) run] 20 0x7fffd235289b _xpc_objc_main 21 0x7fffd23512e4 xpc_main 22 0x10a512091 WebKit::XPCServiceMain() 23 0x10a51237b main 24 0x7fffd20f9235 start 25 0x1
Attachments
Crash log
(48.51 KB, text/plain)
2018-08-29 14:03 PDT
,
Ryan Haddad
no flags
Details
Patch
(5.39 KB, patch)
2019-01-15 13:04 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.38 KB, patch)
2019-01-16 15:00 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-08-29 14:03:32 PDT
<
rdar://problem/43856423
>
youenn fablet
Comment 2
2019-01-15 13:04:43 PST
Created
attachment 359194
[details]
Patch
Alex Christensen
Comment 3
2019-01-16 13:56:55 PST
Comment on
attachment 359194
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=359194&action=review
> Source/WebKit/NetworkProcess/NetworkResourceLoader.h:116 > + void shouldNotCaptureExtraNetworkLoadMetricsEnabled() { m_shouldCaptureExtraNetworkLoadMetrics = false; }
This is a poorly named function. void setShouldNotCaptureExtraNetworkLoadMetrics(bool)
youenn fablet
Comment 4
2019-01-16 14:51:32 PST
(In reply to Alex Christensen from
comment #3
)
> Comment on
attachment 359194
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=359194&action=review
> > > Source/WebKit/NetworkProcess/NetworkResourceLoader.h:116 > > + void shouldNotCaptureExtraNetworkLoadMetricsEnabled() { m_shouldCaptureExtraNetworkLoadMetrics = false; } > > This is a poorly named function. void > setShouldNotCaptureExtraNetworkLoadMetrics(bool)
Let's rename it to disableExtraNetworkLoadMetricsCapture(). I do not really like the idea of setShouldNotCaptureExtraNetworkLoadMetrics(true).
youenn fablet
Comment 5
2019-01-16 15:00:33 PST
Created
attachment 359315
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2019-01-16 15:50:33 PST
Comment on
attachment 359315
[details]
Patch for landing Clearing flags on attachment: 359315 Committed
r240089
: <
https://trac.webkit.org/changeset/240089
>
WebKit Commit Bot
Comment 7
2019-01-16 15:50:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug